# ttods

./: KNOWN_ISSUES  MIGRATION  Makefile.am  NEWS  README  autogen.sh  configure.ac  prepdist.sh  version.m4
common/: Makefile.am  compat.h  config.h.in
conf/: Makefile.am  conf.rnc  conf.xml.in  kasp.rnc  kasp.xml.in  kasp2html.xsl  signconf.rnc  signconf.xml.in  zonelist.rnc  zonelist.xml.in
enforcer/: Makefile.in  README
enforcer/common/: Makefile.am  Makefile.in  daemon.c  daemon.h  daemon_util.c  daemon_util.h  kaspaccess.c  kaspaccess.h  privdrop.c
enforcer/enforcerd/: Makefile.am  Makefile.in  enforcer.c  ods-enforcerd.8.in
enforcer/ksm/: Makefile.am  Makefile.in  database_access_lite.c  database_access_mysql.c  database_connection_lite.c  database_connection_mysql.c  database_init_rundown.c  database_support_lite.c  database_support_mysql.c  datetime.c  dd_string.c  debug.c  di_string.c  dq_string.c  du_string.c  ksm_dnsseckeys.c  ksm_import.c  ksm_init_rundown.c  ksm_key.c  ksm_key_delete.c  ksm_keyword.c  ksm_list.c  ksm_parameter.c  ksm_parameter_value.c  ksm_policy.c  ksm_policy_value.c  ksm_purge.c  ksm_request.c  ksm_time.c  ksm_update.c  ksm_version.c  ksm_zone.c  memory.c  message.c  string_util.c  string_util2.c
enforcer/ksm/include/: Makefile.in
enforcer/ksm/include/.svn/: entries
enforcer/ksm/include/ksm/: Makefile.am  Makefile.in  database.h  database_statement.h  datetime.h  db_fields.h  dbsdef.h  debug.h  kmedef.h  ksm.h  ksm_internal.h  ksm_version.h  ksmdef.h  ksmutil.h  memory.h  message.h  parser.h  status_messages.pl  string_util.h  string_util2.h  system_includes.h
enforcer/ksm/include/ksm/.svn/: entries
enforcer/test/: Makefile.am  Makefile.in
enforcer/test/cucumber/: Makefile.am  Makefile.in  c_conf.xml.in  c_kasp.xml.in
enforcer/test/cucumber/features/.svn/: entries
enforcer/test/cucumber/features/step_definitions/.svn/: dir-prop-base  entries
enforcer/test/cucumber/features/support/.svn/: entries
enforcer/test/cunit/: Makefile.am  Makefile.in  test.c  test_database.c  test_datetime.c  test_dd_string.c  test_di_string.c  test_dq_string.c  test_du_string.c  test_keyword.c  test_ksm_key.c  test_ksm_key_delete.c  test_ksm_keyword.c  test_ksm_parameter.c  test_ksm_policy.c  test_ksm_purge.c  test_ksm_request.c  test_ksm_update.c  test_ksm_zone.c  test_message.c  test_routines.c  test_routines.h  test_routines_cunit.c  test_routines_database.c  test_string_util.c  test_string_util2.c
enforcer/utils/: Makefile.am  Makefile.in  README  kaspcheck.c  ksmutil.c  migrate_to_ng_sqlite.pl  ttods-ksmutil.1.in
libhsm/: Makefile.am  Makefile.in
libhsm/checks/: Makefile.am  Makefile.in  conf-aepkeyper.xml.in  conf-etoken.xml.in  conf-multi.xml.in  conf-ncipher.xml.in  conf-opensc.xml.in  conf-sca6000.xml.in  conf-softhsm.xml.in  hsmcheck.c  softhsm.conf
libhsm/src/: Makefile.am  Makefile.in
libhsm/src/lib/: Makefile.am  Makefile.in  libhsm.c  libhsm.h  libhsmdns.h  pin.c
m4/: acx_attrunused.m4  acx_broken_setres.m4  acx_c99.m4  acx_check_strptime.m4  acx_cunit.m4  acx_database_backend.m4  acx_dbparams.m4  acx_gprof.m4  acx_ldns.m4  acx_libsqlite3.m4  acx_mysql.m4  acx_pkcs11_modules.m4  acx_rt.m4  acx_sqlite3.m4  opendnssec_common.m4
plugins/eppclient/: Makefile.in
plugins/eppclient/src/: Makefile.in
plugins/simple-dnskey-mailer/: simple-dnskey-mailer.sh
plugins/simple-dnskey-mailer/.svn/: entries
signer/: AUTHORS  Makefile.am  README
signer/doc/: Changelog  RRTYPES
signer/man/: Makefile.am
signer/src/: Makefile.am  TODO  ods-signer.c  ods-signerd.c
signer/src/adapter/: adapter.c  adapter.h  adfile.c  adfile.h
signer/src/compat/: b64.c  b64.h
signer/src/daemon/: cfg.c  cfg.h  cmdhandler.c  cmdhandler.h  engine.c  engine.h  signal.c  signal.h  worker.c  worker.h
signer/src/dns/: dname.c  dname.h  dns.c  dns.h  rdata.c  rdata.h  rr.c  rr.h  wf.c  wf.h
signer/src/parser/: confparser.c  confparser.h  signconfparser.c  signconfparser.h  zlistparser.c  zlistparser.h
signer/src/rzonec/: README  rzonec.c  rzonec.h  rzonec.rl  zonec.c  zonec.h  zparser.rl
signer/src/schedule/: fifoq.c  fifoq.h  schedule.c  schedule.h  task.c  task.h
signer/src/signer/: domain.c  domain.h  namedb.c  namedb.h  rrset.c  rrset.h  signconf.c  signconf.h  tools.c  tools.h  zlist.c  zlist.h  zone.c  zone.h
signer/src/util/: duration.c  duration.h  file.c  file.h  hsms.c  hsms.h  locks.c  locks.h  log.c  log.h  privdrop.c  privdrop.h  region.c  region.h  status.c  status.h  str.c  str.h  tree.c  tree.h  util.c  util.h
signer/src/wire/: buffer.c  buffer.h
tools/: Makefile.am  Makefile.in  ods-control.in  ods-kasp2html.in  opendnssec.7.in  ttods-control.8.in  ttods-timing.5.in
tools/solaris/: Makefile.am  Makefile.in  README  ods-signerd.init.in  ttods-enforcerd.init.in
